--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,22 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
-group 'com.snowypalace'
-version '1.0-SNAPSHOT'
+mainClassName = 'com.snowypalace'
+
+version '1.0'
 
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
     jcenter()
 }
 
 dependencies {
-    compile 'net.dv8tion:JDA:3.8.3_461'
+    compile group: 'net.dv8tion', name: 'JDA', version: '3.8.3_461'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
 }
+
+compileJava.options.encoding = 'UTF-8'
